--- a/Homework_Fondamenti_di_IA_AA_2023_24.ipynb
+++ b/Homework_Fondamenti_di_IA_AA_2023_24.ipynb
@@ -2868,7 +2868,7 @@
         "x_train,y_train=get_x_y(ds_train,\"NObeyesdad\")\n",
         "x_test,y_test=get_x_y(ds_train,\"NObeyesdad\")\n",
         "\n",
-        "iper=[[2,1],[3,2],[2,2],[5,4],[1,2]]\n",
+        "iper=[[2,1],[3,2],[2,2],[5,4]]\n",
         "name=[\"vicini (k)\",\"tipologia di distanza (p)\"]\n",
         "scelti_knn=iper_s(predict_knn,None,False,x_train,y_train,x_test,y_test,iper,name)\n",
         "print(f\"Parametri scelti {name[0]}: {scelti_knn[0]}; {name[1]}: {scelti_knn[1]};\")"
